# time-track

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml
src/timetrack/: asgi.py  settings.py  urls.py  wsgi.py
src/timetrack/accounts/: apps.py  middleware.py
src/timetrack/core/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/timetrack/core/migrations/: 0001_initial.py
src/timetrack/gcal/: admin.py  apps.py  models.py  oauth.py  sync.py  urls.py  views.py
src/timetrack/gcal/migrations/: 0001_initial.py
src/timetrack/plugins/: apps.py  base.py  registry.py
src/timetrack/plugins/practice/: admin.py  apps.py  forms.py  models.py  plugin.py  (+2 more)
src/timetrack/schedule/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
src/timetrack/strava/: apps.py  models.py  oauth.py  sync.py  urls.py  views.py
static/css/: app.css  input.css
static/js/: grid.js
templates/: base.html
templates/accounts/: login.html
templates/core/: categories.html  dashboard.html
templates/core/partials/: category_list.html
templates/gcal/: settings.html
templates/practice/: goals.html
templates/practice/partials/: goal_edit_row.html  goal_row.html
templates/running/: plan_detail.html  plan_list.html
templates/schedule/: grid.html  history.html  template_editor.html  template_list.html  week_list.html  week_view.html  weekly_tasks.html
templates/schedule/partials/: block_chip.html  block_edit_panel.html  planning_modal.html  review_modal.html  week_grid_interactive.html  week_stats.html
templates/strava/: settings.html
tests/: conftest.py  test_clone_service.py  test_dashboard.py  test_gcal_sync.py  test_new_features.py  test_plugin_registry.py  test_plugin_save_regression.py  test_practice_plugin.py  test_running_plugin.py  test_strava_sync.py  test_training_plan.py  test_views.py  test_weekly_reflections.py
tests/e2e/: conftest.py  test_block_interactions.py  test_grid_interactions.py  test_suggestion_panel.py  test_weekly_reflection_modals.py
(+21 files in other folders)
