[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timetrack"
version = "0.1.0"
description = "Personal time-tracking and weekly planning app"
requires-python = ">=3.10"
dependencies = [
    "django>=5.1,<6.0",
    "gunicorn>=22.0",
    "whitenoise>=6.7",
    "django-environ>=0.11",
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.130",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-playwright>=0.5",
    "factory-boy>=3.3",
    "coverage[toml]>=7.5",
]
lint = [
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/timetrack"]

[tool.hatch.envs.default]
features = ["dev", "lint"]

[tool.hatch.envs.default.scripts]
manage = "python manage.py {args}"
dev = "python manage.py runserver {args}"
migrate = "python manage.py migrate {args}"
makemigrations = "python manage.py makemigrations {args}"
shell = "python manage.py shell {args}"
bootstrap = "python manage.py bootstrap_superuser {args}"
seed = "python manage.py seed_demo {args}"
css = "tailwindcss -i static/css/input.css -o static/css/app.css --minify {args}"
css-watch = "tailwindcss -i static/css/input.css -o static/css/app.css --watch {args}"

[tool.hatch.envs.test]
features = ["dev"]
[tool.hatch.envs.test.scripts]
run = "pytest {args}"
cov = "coverage run -m pytest {args} && coverage report"

[tool.hatch.envs.lint]
features = ["lint"]
[tool.hatch.envs.lint.scripts]
check = "ruff check ."
fmt = "ruff format ."
fix = "ruff check --fix . && ruff format ."

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "timetrack.settings"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v --tb=short --ignore=tests/e2e"

[tool.coverage.run]
source = ["src/timetrack"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["B904", "E501"]
